formatting, hopefully nothing was lost

--- a/yoooo.html
+++ b/yoooo.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
+<!DOCTYPE html> 
+<html
+    lang="en-US"> 
 <head>
-
-<title>
-Nick's Web page
-</title>
-<link rel="stylesheet" href="cssyoooo.css">
+    <title>Nick's Web page </title>
+    <link
+        href="cssyoooo.css"
+        rel="stylesheet">
 </head>
+<div
+   class="bod"> 
+<body
+    style="background-color:#66CCFF">
+<h1
+  id="ha"
+  title="pichead1">Picture 1 </h1>
+<hr> 
 
-<div class="bod">
-
-<body style="background-color:#66CCFF">
-
-
-<h1 title="pichead1" id = "ha">
-Picture 1
-</h1>
-
-<hr>
-
-<p title="picdesc1" id = "pa">
-This is a picture of a diamond wallpaper.
-</p>
-
-
-<a title="picred1" id = "aa" 
-href ="file:///C:/Program%20Files%20(x86)/Notepad++/yo.html">
-Go here
-</a>
-
+<p
+ id="pa"
+ title="picdesc1">This is a picture of a diamond wallpaper. </p>
+<a
+ href="file:///C:/Program%20Files%20(x86)/Notepad++/yo.html"
+ id="aa"
+ title="picred1"> Go here </a> 
 </body>
 </div>
-</html>
+</html> 
